# k8s_release_validator_mock_service

./: .gitignore  LICENSE  README.md  makefile  pyproject.toml  requirements.txt
app/: main.py
app/api/v1/: routes_mock.py
app/core/: config.py
app/schema/: response.py
app/service/: mock_service.py
deployment/: .dockerignore  Dockerfile  deployment.yaml  docker-compose.yml
deployment/k8s/: deployment.yaml  service.yaml
